14084
It looks inconsistent when values inside the xml elements are implicitly converted to string but values in the xml attributes are not.

Reproducing:
{code}
scala> <x>{2+2}</x>
 
res2: scala.xml.Elem = <x>4</x>

scala> <x y={2+2} />

<console>:5: error: overloaded method constructor UnprefixedAttribute
with alternatives 
(String,Option[Seq[scala.xml.Node]],scala.xml.MetaData)scala.xml.UnprefixedAttribute 
<and> 
(String,String,scala.xml.MetaData)scala.xml.UnprefixedAttribute 
<and> (String,Seq[scala.xml.Node],scala.xml.MetaData)scala.xml.UnprefixedAttribute cannot be applied to (java.lang.String,Int,scala.xml.MetaData)
       <x y={2+2} />
        ^

scala> <x y={(2+2).toString} /> 
 
res4: scala.xml.Elem = <x y="4"></x>

{code}
